[fix] Fix picture not centered correctly in some browsers

--- a/src/styles/viewer.styl
+++ b/src/styles/viewer.styl
@@ -39,7 +39,8 @@ $toolbar-height = em(96px)
             img
                 position   absolute
                 top        50%
-                transform  translateY(-50%)
+                left       50%
+                transform  translate(-50%, -50%)
                 max-height 100%
                 max-width  100%
                 box-shadow 0 6px 24px 0 rgba(0, 0, 0, 0.5)
